--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "mernshop_front",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mernstackman/mern_shop.git"
+  },
   "dependencies": {
     "@material-ui/core": "^4.5.2",
     "prop-types": "^15.7.2",
