--- a/package.json
+++ b/package.json
@@ -8,14 +8,24 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
+    "formik": "^2.0.3",
+    "formik-material-ui": "^1.0.0",
+    "formsy-react": "^1.1.5",
     "immer": "^5.0.0",
+    "jss": "^10.0.0",
+    "jss-extend": "^6.2.0",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-jss": "^10.0.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "redux-saga": "^1.1.1"
+    "redux-saga": "^1.1.1",
+    "styled-components": "^4.4.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "npm run tailwind && react-scripts start",
