--- a/package.json
+++ b/package.json
@@ -1,55 +1,68 @@
 {
-  "name": "mernshop_front",
-  "version": "0.1.0",
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mernstackman/mernshop_front.git"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.5.2",
-    "@material-ui/icons": "^4.5.1",
-    "formik": "^2.0.3",
-    "formik-material-ui": "^1.0.0",
-    "formsy-react": "^1.1.5",
-    "immer": "^5.0.0",
-    "jss": "^10.0.0",
-    "jss-extend": "^6.2.0",
-    "lodash": "^4.17.15",
-    "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-jss": "^10.0.0",
-    "react-redux": "^7.1.1",
-    "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.1.1",
-    "styled-components": "^4.4.1",
-    "yup": "^0.27.0"
-  },
-  "scripts": {
-    "start": "npm run tailwind && react-scripts start",
-    "build": "npm run tailwind && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "tailwind": "./node_modules/.bin/tailwind build ./src/styles/tailwind/tailwind.css -c tailwind.config.js -o ./src/styles/tailwind.css"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^1.1.3"
-  }
+    "name": "mernshop_front",
+    "version": "0.1.0",
+    "private": true,
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mernstackman/mernshop_front.git"
+    },
+    "dependencies": {
+        "@material-ui/core": "^4.5.2",
+        "@material-ui/icons": "^4.5.1",
+        "@material-ui/styles": "^4.6.0",
+        "formik": "^2.0.3",
+        "formik-material-ui": "^1.0.0",
+        "formsy-react": "^1.1.5",
+        "immer": "^5.0.0",
+        "jss": "^10.0.0",
+        "jss-extend": "^6.2.0",
+        "lodash": "^4.17.15",
+        "prop-types": "^15.7.2",
+        "react": "^16.11.0",
+        "react-dom": "^16.11.0",
+        "react-jss": "^10.0.0",
+        "react-redux": "^7.1.1",
+        "react-scripts": "3.2.0",
+        "redux": "^4.0.4",
+        "redux-saga": "^1.1.1",
+        "style-object-to-css-string": "^1.0.1",
+        "styled-components": "^4.4.1",
+        "typeface-roboto": "0.0.75",
+        "yup": "^0.27.0"
+    },
+    "scripts": {
+        "start": "npm run tailwind && react-scripts start",
+        "build": "npm run tailwind && react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "tailwind": "./node_modules/.bin/tailwind build ./src/styles/tailwind/tailwind.css -c tailwind.config.js -o ./src/styles/tailwind.css",
+        "storybook": "start-storybook -p 6006"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@storybook/addon-actions": "^5.2.6",
+        "@storybook/addon-backgrounds": "^5.2.6",
+        "@storybook/addon-knobs": "^5.2.6",
+        "@storybook/addon-links": "^5.2.6",
+        "@storybook/addon-notes": "^5.2.6",
+        "@storybook/addons": "^5.2.6",
+        "@storybook/react": "^5.2.6",
+        "eslint": "^6.6.0",
+        "prettier": "^1.19.1",
+        "tailwindcss": "^1.1.3"
+    }
 }
